[package]
name = "simple-jsonrpc-client"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple jsonrpc client wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
jsonrpc-core = "14.0"
reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
